--- a/index.html
+++ b/index.html
@@ -5,9 +5,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower shop</title>
     <link rel="shortcut icon" href="images/rose1.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Lora:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <h1>Flower</h1>
+    <header>
+        <div class="banner-content">
+            <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
+            <p>It is a long established fact that a reader will be distracted 
+                by the readable content of a page when looking at its layout.
+                    The point of using Lorem Ipsum is that it has a more-or-less 
+                    normal distribution of letters.</p>
+            <div class="btn-primary"><a href="#">Shop Now</a></div>
+
+        </div>
+        <div class="banner-img">
+            <img src="images/pngwing 10.png" alt="">
+        </div>
+    </header>
+    <div class="feature-area">
+        <div class="feature-content">
+            <h2>Our Featured Flowers</h2>
+            <p>It is a long established fact that a reader will
+                 be distracted by the readable <br> content of 
+                 a page when looking at its layout.</p>
+        </div>
+        <div class="feature-img">
+            <div class="img-sec-1">
+                <img src="images/pngwing 7.png" alt="">
+                <h3>Pink Flower Tree</h3>
+            </div>
+            <div class="img-sec-2">
+                <img src="images/pngwing 6.png" alt="">
+                <h3>Pink Flower Tree</h3>
+            </div>
+            <div class="img-sec-3">
+                <img src="images/pngwing 5.png" alt="">
+                <h3>Pink Flower Tree</h3>
+            </div>
+            <div class="img-sec-2">
+                <img src="images/pngwing 6.png" alt="">
+                <h3>Pink Flower Tree</h3>
+            </div>
+    </div>
+    <div class="discount-area">
+        <div class="discount-content">
+            <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+            <p>It is a long established fact that a reader
+                 will be distracted by the readable <br> content
+                  of a page when looking at its layout.</p>
+            <div class="btn-primary"><a href="#">Shop Now</a></div>
+        </div>
+        <div class="dicount-img">
+            <img src="images/pngwing 8.png" alt="">
+        </div>
+    </div>
+    <div class="instagram-area">
+        <div class="instagram-content">
+            <h2>Instagram</h2>
+            <p>It is a long established fact that a reader will be
+               distracted by the readable <br>content of a page when
+               looking at its layout.</p> 
+        </div> 
+        <div class="instagram-img">
+            <img src="images/Flower 01.png"  alt="" >
+            <img src="images/Rectangle 4.png" alt="">
+            <img src="images/Rectangle 5.png" alt="">
+            <img src="images/Rectangle 6.png" alt="">
+        </div>   
+    </div>
+    <div class="gift-area">
+        <div class="gift-content">
+            <h3>Flower For The</h3>
+            <h2>Birthy & Gifts</h2>
+            <p>It is a long established fact that a reader
+            will be <br> distracted by the readable content
+            of a page <br> when looking at its layout.</p>
+        </div>
+        <div class="gift-flower">
+            <img src="images/rose3.jpg" alt="">
+        </div>
+    </div>
+    <div class="deals-area">
+        <div class="deals-content">
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p>
+           <form action="#">
+                <input type="email" placeholder="Enter Your Email Here..."/>
+                <button type="submit">Subtscribe</button>
+           </form>
+        </div>
+        <div class="deals-banner">
+            <img src="images/Rectangle 9.png" alt="">
+        </div>
+    </div>
+    <footer>
+        <div class="footer-area">
+            <div class="footer-content">
+                <h2><span>Flower</span>Shop</h2>
+                <p>It is a long established fact that a reader
+                will be distracted by the readable <br> content
+                of a page when looking at its layout.</p>
+            </div>
+            <div class="copy-right">
+                <span>@2020-2023, FlowerShop.com. All rights reserved.</span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
